--- a/css/styles.css
+++ b/css/styles.css
@@ -15,14 +15,52 @@ body {
   --footer-contact-color: rgba(255, 255, 255, 0.6);
   --white-color: #ffffff;
 }
+/* Utilites, zero margin/padding */
+.list {
+  list-style: none;
+}
+.link {
+  text-decoration: none;
+  display: block;
+  font-style: normal;
+}
+.img {
+  display: block;
+}
+.container {
+  width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin: 0px auto;
+}
+.section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+ul,
+ol {
+  margin: 0;
+  padding: 0;
+}
+p,
+h1,
+h2,
+h3,
+h4,
+h5 {
+  margin: 0;
+  padding: 0;
+}
 
 /* Logo-style */
 .logo-link {
+  display: inline-block;
+  margin-top: 24px;
+  margin-bottom: 25px;
   font-family: 'RaleWay', sans-serif;
   font-weight: 700;
   font-size: 26px;
   line-height: 1.19;
-  text-decoration: none;
 }
 .logo-link > .logo-web {
   color: var(--main-accent-color);
@@ -36,19 +74,32 @@ body {
 
 /* index-section: Head-navigation + contacts */
 .head-nav {
+  display: flex;
+  margin-left: 93px;
   font-weight: 500;
   line-height: 1.14;
   color: var(--headers-nav-color);
-  list-style: none;
   letter-spacing: 0.02em;
+}
+.head-nav > .item {
+  margin-left: 50px;
 }
 .head-nav-link {
   color: var(--headers-nav-color);
-  text-decoration: none;
+  display: block;
+  padding-top: 32px;
+  padding-bottom: 32px;
 }
 .head-nav-link:hover,
 .head-nav-link:focus {
   color: var(--main-accent-color);
+}
+.head-nav-contacts {
+  display: flex;
+  margin-left: auto;
+}
+.head-nav-contacts .head-contact:last-child {
+  margin-left: 40px;
 }
 .head-contact {
   color: var(--main-p-color);
@@ -61,33 +112,53 @@ body {
 .current {
   color: var(--main-accent-color);
 }
+.nav-flex {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
 /* index-section: EFFECTIVE solutions */
 .effective {
   background-color: var(--bcg-section);
 }
+.container-eff {
+  text-align: center;
+}
 .effective-h {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 30px;
+  margin-top: 106px;
+  width: 696px;
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
-  text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: var(--white-color);
 }
 .effective-btn {
+  display: block;
+  width: 200px;
+  height: 50px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 106px;
   background: var(--main-accent-color);
-  color: var(--white-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
+  border: none;
 }
 .effective-btn-text {
+  color: var(--white-color);
   font-size: 16px;
   line-height: 1.88;
-  display: flex;
-  align-items: center;
-  text-align: center;
   letter-spacing: 0.06em;
 }
+
 /* index-section: FEATURES */
 .features-h-invisible {
   position: absolute;
@@ -102,7 +173,18 @@ body {
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
+.features-list {
+  display: flex;
+}
+.features-list > .item {
+  margin-right: 30px;
+}
+.features-list > .item:last-child {
+  margin-right: 0px;
+}
 .features-h {
+  display: block;
+  margin-bottom: 10px;
   font-size: 14px;
   line-height: 1.14;
   text-transform: uppercase;
@@ -111,20 +193,39 @@ body {
 .features-p {
   line-height: 1.71;
 }
-.features-list {
-  list-style: none;
-}
 /* index-section: our-work */
+.our-work-list {
+  display: flex;
+}
+.our-work-list > .item {
+  margin-right: 30px;
+}
+.our-work-list > .item:last-child {
+  margin-right: 0;
+}
 .our-work-h {
+  display: block;
+  margin-bottom: 50px;
   font-size: 36px;
   line-height: 1.17;
   text-align: center;
   color: var(--headers-nav-color);
 }
-.our-work-list {
-  list-style: none;
-}
 /* index-section: team */
+.team-list {
+  display: flex;
+}
+.team-list > .item {
+  margin-right: 30px;
+}
+.team-list > .item {
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+}
+.team-list > .item:last-child {
+  margin-right: 0;
+}
 .team-h {
   font-size: 36px;
   line-height: 1.17;
@@ -132,6 +233,9 @@ body {
   color: var(--headers-nav-color);
 }
 .team-list-h {
+  display: block;
+  margin-top: 30px;
+  margin-bottom: 10px;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.19;
@@ -143,36 +247,38 @@ body {
   line-height: 1.19;
   text-align: center;
 }
-.team-list {
-  list-style: none;
-}
 /* index-footer */
 .footer {
   background-color: var(--bcg-section);
+  height: 251px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+.logo-link-footer {
+  margin-bottom: 28px;
+  margin-top: 0;
 }
 .footer-address {
   line-height: 1.71;
   font-style: normal;
-  text-decoration: none;
   color: var(--white-color);
-}
-.footer-list {
-  list-style: none;
 }
 .footer-contact {
   line-height: 1.71;
   font-style: normal;
-  text-decoration: none;
   color: var(--footer-contact-color);
 }
 .footer-contact:hover,
 .footer-contact:focus {
   color: var(--main-accent-color);
 }
+.footer-list > .item {
+  margin-bottom: 9px;
+}
 
 /* portfolio-section: main-section, not "main" */
-.btn-list {
-  list-style: none;
+.header {
+  border-bottom: 1px solid #ececec;
 }
 .btn {
   font-family: 'Roboto', sans-serif;
@@ -181,6 +287,8 @@ body {
   line-height: 1.62;
   text-align: center;
   color: var(--headers-nav-color);
+  border-radius: 4px;
+  border: 1px solid transparent;
 }
 .btn:hover,
 .btn:active,
@@ -189,17 +297,46 @@ body {
   background-color: var(--main-accent-color);
   cursor: pointer;
 }
+.btn-list {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 30px;
+}
+.btn-list > .item {
+  margin-right: 8px;
+}
+.btn-list > .item:last-child {
+  margin-right: 0;
+}
 /* portfolio-section: list portfolio */
 .portf-list {
-  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+}
+.portf-list > .item {
+  width: calc((100% - 60px) / 3);
+  margin-right: 30px;
+  margin-bottom: 30px;
+}
+.portf-list > .item:nth-child(3n) {
+  margin-right: 0;
+}
+.portf-list > .item:nth-last-child(-n + 3) {
+  margin-bottom: 0;
+}
+.portf-list > .item {
+  border: 1px solid #eeeeee;
 }
 .portf-h {
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
   color: var(--headers-nav-color);
+  margin-top: 20px;
+  margin-bottom: 4px;
 }
 .portf-p {
   font-size: 16px;
   line-height: 1.88;
 }
+/* portfolio: footer */
